Fix Image & Ensure Visible Text

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -148,22 +148,20 @@ footer {
 }
 
 .gallery-item {
-  overflow: hidden;
   text-align: center;
   transition: transform 0.3s ease;
-  max-width: 250px; 
-  max-height: 300px; 
+  max-width: 250px;
+  overflow: visible;
 }
 
 .gallery-item img {
   width: 100%;
-  height: 85%;
+  height: auto;
   display: block;
-  object-fit: cover;
-  object-position: center;
+  object-fit: contain;
+  margin-bottom: 10px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
 }
 
 .gallery-item p {
